--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body { 
-  background: url(https://images.unsplash.com/photo-1484544808355-8ec84e534d75?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=fc1407c2a550b0ebf3def8b81fa7b4a2&auto=format&fit=crop&w=1366&q=80) no-repeat center center fixed; 
+  background: url(https://i.ibb.co/QnjW6Rb/blue-mountains.jpg) no-repeat center center fixed; 
   background-size: cover;
 }
 
